--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 minimal_mistakes_skin: default
 locale: en-US
-title: Site Title
+title: 주저리 주저리
 title_separator: '-'
 name: 심심해
 description: 이거 저거 주저리
